--- a/destination.html
+++ b/destination.html
@@ -27,10 +27,10 @@
     <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
     <nav>
         <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
-            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span aria-hidden="true">00</span>Home</a>
-            <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span aria-hidden="true">01</span>Destination</a>
-            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span aria-hidden="true">02</span>Crew</a>
-            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span aria-hidden="true">03</span>Technology</a>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="/"><span aria-hidden="true">00</span>Home</a>
+            <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="/destination"><span aria-hidden="true">01</span>Destination</a>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="/crew"><span aria-hidden="true">02</span>Crew</a>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="/technology"><span aria-hidden="true">03</span>Technology</a>
         </ul>
     </nav>
   </header>
@@ -67,8 +67,8 @@
     <article class="destination-info flow" id="moon-tab" tabindex="0" role="tabpanel">
       <h2 class="fs-800 uppercase ff-serif">Moon</h2>
 
-      <p>See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-      regain perspective and come back refreshed. While you’re there, take in some history 
+      <p>See our planet as you've never seen it before. A perfect relaxing trip away to help 
+      regain perspective and come back refreshed. While you're there, take in some history 
       by visiting the Luna 2 and Apollo 11 landing sites.</p>
       
       <div class="destination-meta flex">
@@ -87,8 +87,8 @@
     <article hidden class="destination-info flow" id="mars-tab" tabindex="0"  role="tabpanel">
       <h2 class="fs-800 uppercase ff-serif">Mars</h2>
 
-      <p>Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, 
-  the tallest planetary mountain in our solar system. It’s two and a half times 
+      <p>Don't forget to pack your hiking boots. You'll need them to tackle Olympus Mons, 
+  the tallest planetary mountain in our solar system. It's two and a half times 
   the size of Everest!</p>
       
       <div class="destination-meta flex">
@@ -108,7 +108,7 @@
       <h2 class="fs-800 uppercase ff-serif">Europa</h2>
 
       <p>The smallest of the four Galilean moons orbiting Jupiter, Europa is a 
-  winter lover’s dream. With an icy surface, it’s perfect for a bit of 
+  winter lover's dream. With an icy surface, it's perfect for a bit of 
   ice skating, curling, hockey, or simple relaxation in your snug 
   wintery cabin.</p>
       <div class="destination-meta flex">
