--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       
   <!-- Our custom CSS -->
   <link rel="stylesheet" href="index.css">
-  <title>Space travel</title>
+  <title>Space Travel</title>
   <script src="navigation.js" defer></script>
 </head>
 <body class="home">
